--- a/servidor_minecraft/server.properties
+++ b/servidor_minecraft/server.properties
@@ -1,10 +1,10 @@
 #Minecraft server properties
-#Thu Oct 31 01:36:18 UTC 2024
+#Thu Oct 31 01:57:18 UTC 2024
 allow-flight=true
 allow-nether=true
 broadcast-console-to-ops=true
 broadcast-rcon-to-ops=true
-difficulty=easy
+difficulty=hard
 enable-command-block=false
 enable-jmx-monitoring=false
 enable-query=false
@@ -22,10 +22,10 @@ level-name=mundo
 level-seed=
 level-type=default
 max-build-height=256
-max-players=20
+max-players=80
 max-tick-time=60000
 max-world-size=29999984
-motd=A Minecraft Server
+motd=DIA 1 DE UN INFIERNO POR LOS ZOMBIES
 network-compression-threshold=256
 online-mode=false
 op-permission-level=4
@@ -49,4 +49,4 @@ sync-chunk-writes=true
 text-filtering-config=
 use-native-transport=true
 view-distance=10
-white-list=false
+white-list=true
