--- a/servidor_minecraft/server.properties
+++ b/servidor_minecraft/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Thu Oct 31 01:57:18 UTC 2024
+#Thu Oct 31 02:21:52 UTC 2024
 allow-flight=true
 allow-nether=true
 broadcast-console-to-ops=true
@@ -49,4 +49,4 @@ sync-chunk-writes=true
 text-filtering-config=
 use-native-transport=true
 view-distance=10
-white-list=true
+white-list=false
