--- a/servidor_minecraft/plugins/DecentHolograms/holograms/spawn1.yml
+++ b/servidor_minecraft/plugins/DecentHolograms/holograms/spawn1.yml
@@ -1,13 +1,13 @@
 location: w:81.000:72.000:97.500
 enabled: true
-display-range: 5
+display-range: 6
 update-range: 1
 update-interval: 20
 facing: 0.0
 down-origin: false
 pages:
 - lines:
-  - content: Bienvenido al server
+  - content: '&a&lBienvenido al server'
     height: 0.3
   - content: listo para la aventura?
     height: 0.3
