--- a/servidor_minecraft/plugins/NametagEdit/groups.yml
+++ b/servidor_minecraft/plugins/NametagEdit/groups.yml
@@ -1,11 +1,11 @@
 Groups:
   Admin:
     Permission: nte.admin
-    Prefix: '&c[Admin] &r'
+    Prefix: '&r'
     Suffix: '&f'
     SortPriority: 1
   default:
     Permission: nte.default
-    Prefix: '&a[jugador] &r'
+    Prefix: '&r'
     Suffix: ''
     SortPriority: -1
